<resources>
    <string name="app_name">190-Gonza Up Slots</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="reset_balance">Reset Balance</string>
    <string name="back_to_menu">Return back</string>
    <string name="winnings">Reward</string>
    <string name="balance">Balance</string>
    <string name="win_rate">Coefficient</string>
    <string name="collect">Get Reward</string>
    <string name="confirm">Start</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Try Again</string>
    <string name="exit">Main menu</string>
    <string name="main_rule">There is a field that contains 30 cards. Each card might be winning, losing or super winning. By flipping each winning or super winning card, your win coefficient increases. By flipping losing card, game ends. Keep flipping cards to increase your win rate or collect reward to not risk</string>
    <string name="low">Low</string>
    <string name="medium">Normal</string>
    <string name="high">Hard</string>
    <string name="exit_game">Exit Game</string>
    <string name="difficulty">Difficulty</string>
    <string name="spin">Spin!</string>
    <string name="scores">Scores</string>
    <string name="rule_roulette">After collecting your reward, you have a chance to spin an wheel and multiply your reward from 2 to 6 times, but you also have a chance to lose everything!</string>
    <string name="rule_types">There are only 3 variants of existing cards</string>
    <string name="rule_difficulty">There are also 3 difficulty levels in the game. The differences between them are only in amount of losing cards. 5 on low difficulty, 10 on normal difficulty and 15 on hard difficulty</string>
    <string name="rule_stones">The winning card (left one) will multiply your win rate by 1.1 on low difficulty, 1.2 on normal difficulty and 1.3 on hard difficulty. The losing card (right one) ends game, reward disappears! The super winning card increases your rate by 1.0 on low difficulty, 2.0 on normal difficulty and 3.0 on hard difficulty</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="withdraw">You lost, but you have a chance to withdraw your winnings. Open the correct card to withdraw</string>
    <string name="bonus_game">Bonus Game</string>
    <string name="the_one_round_of_bonus_game_has_a_price">The one round of bonus game has a price</string>
    <string name="rps_game">The bonus game! The rules are the same as the rock paper scissors rules. Here you can see the diagram that shows us what beats what. If you win, reward doubles!</string>
    <string name="rule_lives">You can make a mistake 2 times. You have total 3 lives, by losing third one - game ends, or you will get a chance to play bonus game. Win it and get 1 extra life</string>
</resources>