<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu_portrait">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_logotype"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gonzup.upslt.game.other.CustomButton
        android:id="@+id/play_button"
        style="@style/MenuButtons"
        android:text="@string/play"
        android:textColor="@color/text_color"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button" />

    <com.gonzup.upslt.game.other.CustomButton
        android:id="@+id/settings_button"
        style="@style/MenuButtons"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gonzup.upslt.game.other.CustomButton
        android:id="@+id/info_button"
        style="@style/MenuButtons"
        android:text="@string/info"
        android:textColor="@color/text_color"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button"
        app:layout_constraintTop_toBottomOf="@+id/settings_button" />

    <com.gonzup.upslt.game.other.CustomButton
        android:id="@+id/bonus_button"
        style="@style/MenuButtons"
        android:layout_marginTop="12dp"
        android:text="@string/bonus_game"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button"
        app:layout_constraintTop_toBottomOf="@+id/info_button" />


</androidx.constraintlayout.widget.ConstraintLayout>